--- a/trunk/src/app/web/index.html
+++ b/trunk/src/app/web/index.html
@@ -1,59 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META NAME="Author" CONTENT="Douglas Bullard">
-<META NAME="Generator" CONTENT="NetObjects Fusion 7 for Windows">
-<META NAME="Keywords" CONTENT="Nurflugel, Ant, GraphViz">
-<TITLE>index</TITLE>
-<!-- doctype html public "-//w3c//dtd html 4.0 transitional//en" -->
-
-<LINK REL=STYLESHEET TYPE="text/css" HREF="./style.css">
-<LINK REL=STYLESHEET TYPE="text/css" HREF="./site.css">
-<STYLE>
-</STYLE>
-</HEAD>
-<BODY NOF="(MB=(ZeroMargins, 0, 0, 0, 0), L=(indexLayout, 758, 1114))" STYLE="background-color: rgb(255,255,255); background-image: url('help/html/assets/images/wing1.jpg');" TOPMARGIN=0 LEFTMARGIN=0 MARGINWIDTH=0 MARGINHEIGHT=0>
-    <TABLE CELLPADDING=30 CELLSPACING=0 WIDTH="100%" HEIGHT="100%" VALIGN=TOP>
-        <TR>
-            <TD VALIGN=TOP CLASS="TextObject" STYLE="background-image: url('help/html/assets/images/wing1.jpg');">
-<SPAN STYLE="font-family: 'Trebuchet MS', Tahoma, Verdana, Arial, Helvetica, Sans-serif, sans-serif; font-size: medium;"/>
-                <P STYLE="text-align: center;"><B><SPAN STYLE="font-size: x-large;">Nurflugel Ant Script Visualizer</SPAN></B></P>
-                <P STYLE="text-align: left;"><B><SPAN STYLE="font-size: medium;">Welcome to the Nurflugel Ant Script Visualizer!<IMG ID="Picture1" HEIGHT=294 WIDTH=433 SRC="help/html/assets/images/build_small.png" VSPACE=0 HSPACE=0 ALIGN="RIGHT" BORDER=0 ALT=""></SPAN></B></P>
-                <P STYLE="text-align: left;"><A HREF="./help/html/html/what_exactly_is_ant_script_vis.html">What exactly is the Ant Script Visualizer?</A></P>
-                <P STYLE="text-align: left;"><A HREF="./help/html/html/legend.html">Where is the legend?  What do the shapes and colors mean?</A></P>
-                <P STYLE="text-align: left;"><A HREF="./help/html/html/using_ant_script_visualizer.html">Using the Ant Script Visualizer</A></P>
-                <P STYLE="text-align: left;"><A HREF="./help/html/html/whats_left_todo.html">What's left to do?</A></P>
-                <P STYLE="text-align: left;"><A HREF="./help/html/html/bugs.html">Bugs, bugs, bugs....</A></P>
-                <P STYLE="text-align: left;"><A HREF="./help/html/html/updates.html">How do I get program updates?</A></P>
-                <P STYLE="text-align: left;"><A HREF="./help/html/html/contact_me.html">Contacting me</A><BR>&nbsp;</P>
-<SPAN STYLE="font-family: 'Trebuchet MS', Tahoma, Verdana, Arial, Helvetica, Sans-serif, sans-serif;">
-                <P><HR ID="HRRule1" WIDTH="100%" ALIGN=CENTER SIZE=2><B>How to install this application</B>:
-                <li><A HREF="http://www.graphviz.org/"><B>Download GraphViz.</B></A> This is what actually generates the graphics files (my program just generates the data files in a format that GraphViz understands).</li>
-                <li><A HREF="http://www.java.com/en/download/index.jsp"><B>Download Java 6</B></A>(Windows users only - Macs have this already installed in OSX (you may have to turn Java 6 on). If you already have a 1.6 JRE installed on your system, you won't need this (WebStart is included in the JRE). </li>
-                <UL>
-                    <li>Accept all dialogs, ignore the dire warning that you may have to reboot your system - you don't.</li>
-                </UL>
-                <li><A HREF="./antscriptVisualizer.jnlp"><B>Launch the Ant Script Visualizer program </B></A> </li>
-                <li><A HREF="./gradlescriptVisualizer.jnlp"><B>Launch the Gradle Script Visualizer program </B></A> </li>
-                <UL>
-                    <li>Accept all dialogs.</li>
-                    <li> If it asks to load a newer version of Java or WebStart, say &quot;yes&quot;.</li>
-                    <li>Ignore the warnings about installing software on your system. I'm using the free version of Sun's WebStart architecture, and the cost of that is annoying dialogs like this for the users.</li>
-                    <li>Launch it twice from this web page and it'll install icons on to your desktop and start menu. You won't have to visit this site again to run the appliation after that.</li>
-                    <li>You'll always have the most up-to-date version - it updates to new versions automatically!</li>
-                    <li>You'll never have to reinstall or upgrade!</li>
-                    <li>You don't need to be connected to the Internet (or this server) to use the application, but if you are connected, it will update itself if necessary.</li>
-                </UL>
-                <P STYLE="list-style-type: none;"><B>Why do I use Java WebStart?</B></P>
-                <li>It works with any platform - OS X, Windows, Linux.</li>
-                <li>You always have the latest version if you're on the net, but if not, it'll run what you've got</li>
-                <li>It works by just committing the right jars into Google Code</li>
-                <li>Easy storage of user preferences.</li>
-                <li>If you've got PDF capability, it'll use it - server version wouldn't be able to do it (PDF is only on Mac)</li>
-            </TD>
-        </SPAN>
-        </TR>
-    </TABLE>
-</BODY>
-</HTML>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html>  <head>    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">    <meta name="Author" content="Douglas Bullard">    <meta name="Generator" content="NetObjects Fusion 7 for Windows">    <meta name="Keywords" content="Nurflugel, Ant, GraphViz">    <title>index</title>    <!-- doctype html public "-//w3c//dtd html 4.0 transitional//en" -->    <link rel="STYLESHEET" type="text/css" href="./style.css">    <link rel="STYLESHEET" type="text/css" href="./site.css">    <style></style>  </head>  <body nof="(MB=(ZeroMargins, 0, 0, 0, 0), L=(indexLayout, 758, 1114))" style="background-color: rgb(255,255,255); background-image: url('help/html/assets/images/wing1.jpg');"    topmargin="0"    leftmargin="0"    marginheight="0"    marginwidth="0">    <table valign="TOP" cellpadding="30" cellspacing="0" height="100%" width="100%">      <tbody>        <tr>          <td class="TextObject" style="background-image: url('help/html/assets/images/wing1.jpg');"            valign="TOP">            <span style="font-family: 'Trebuchet MS', Tahoma, Verdana, Arial, Helvetica, Sans-serif, sans-serif; font-size: medium;">              <p style="text-align: center;"><b><span style="font-size: x-large;">Nurflugel                    Ant Script Visualizer</span></b></p>              <p style="text-align: left;"><b><span style="font-size: medium;">Welcome                    to the Nurflugel Ant Script Visualizer!<img id="Picture1" src="help/html/assets/images/build_small.png"                      alt=""                      align="RIGHT"                      border="0"                      height="294"                      hspace="0"                      vspace="0"                      width="433"></span></b></p>              <p style="text-align: left;"><a href="./help/html/html/what_exactly_is_ant_script_vis.html">What                  exactly is the Ant Script Visualizer?</a></p>              <p style="text-align: left;"><a href="./help/html/html/legend.html">Where                  is the legend? What do the shapes and colors mean?</a></p>              <p style="text-align: left;"><a href="./help/html/html/using_ant_script_visualizer.html">Using                  the Ant Script Visualizer</a></p>              <p style="text-align: left;"><a href="./help/html/html/whats_left_todo.html">What's                  left to do?</a></p>              <p style="text-align: left;"><a href="./help/html/html/bugs.html">Bugs,                  bugs, bugs....</a></p>              <p style="text-align: left;"><a href="./help/html/html/updates.html">How                  do I get program updates?</a></p>              <p style="text-align: left;"><a href="./help/html/html/contact_me.html">Contacting                  me</a><br>                &nbsp;</p>              <span style="font-family: 'Trebuchet MS', Tahoma, Verdana, Arial, Helvetica, Sans-serif, sans-serif;">                <p></p>                <hr id="HRRule1" align="CENTER" size="2" width="100%"><b>How to                  install this application</b>:                <li><a href="http://www.graphviz.org/"><b>Download GraphViz.</b></a>                  This is what actually generates the graphics files (my program                  just generates the data files in a format that GraphViz                  understands).</li>                <li><a href="http://www.java.com/en/download/index.jsp"><b>Download                      Java 6</b></a>(Windows users only - Macs have this already                  installed in OSX (you may have to turn Java 6 on). If you                  already have a 1.6 JRE installed on your system, you won't                  need this (WebStart is included in the JRE). </li>                <ul>                  <li>Accept all dialogs, ignore the dire warning that you may                    have to reboot your system - you don't.</li>                </ul>                <li><a href="./antscriptVisualizer.jnlp"><b>Launch the Ant                      Script Visualizer program </b></a> </li>                <ul>                  <li>Accept all dialogs.</li>                  <li> If it asks to load a newer version of Java or WebStart,                    say "yes".</li>                  <li>Ignore the warnings about installing software on your                    system. I'm using the free version of Sun's WebStart                    architecture, and the cost of that is annoying dialogs like                    this for the users.</li>                  <li>Launch it twice from this web page and it'll install icons                    on to your desktop and start menu. You won't have to visit                    this site again to run the appliation after that.</li>                  <li>You'll always have the most up-to-date version - it                    updates to new versions automatically!</li>                  <li>You'll never have to reinstall or upgrade!</li>                  <li>You don't need to be connected to the Internet (or this                    server) to use the application, but if you are connected, it                    will update itself if necessary.</li>                </ul>                <p style="list-style-type: none;"><b>Why do I use Java WebStart?</b></p>                <li>It works with any platform - OS X, Windows, Linux.</li>                <li>You always have the latest version if you're on the net, but                  if not, it'll run what you've got</li>                <li>It works by just committing the right jars into Google Code</li>                <li>Easy storage of user preferences.</li>                <li>If you've got PDF capability, it'll use it - server version                  wouldn't be able to do it (PDF is only on Mac)</li>              </span></span></td>        </tr>      </tbody>    </table>  </body></html>
