--- a/src/main/java/com/nurflugel/util/gradlescriptvisualizer/ui/GradleScriptMainFrame.form
+++ b/src/main/java/com/nurflugel/util/gradlescriptvisualizer/ui/GradleScriptMainFrame.form
@@ -26,8 +26,8 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <enabled value="false"/>
-              <text value="Watch file for changes"/>
+              <enabled value="true"/>
+              <text value="Watch files for changes"/>
             </properties>
           </component>
           <grid id="8e218" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
